# zellij-3036-repro

./: Cargo.toml  readme.md
src/: main.rs
