[package]
name = "rust-wr"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#[cfg(not(target_family = "wasm"))]
[target.'cfg(not(target_family = "wasm"))'.dependencies]
async-std = { version = "1.3.0", features = ["unstable", "attributes"] }
surf = { version = "2.3.2", default-features = false, features = [
  "curl-client",
] }
